K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tron-server
  namespace: tron
  labels:
    app: tron-server
spec:
  type: ClusterIP
  selector:
    app: tron-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
